WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
195006
A prewarmed Web process should have a process assertion.
https://bugs.webkit.org/show_bug.cgi?id=195006
Summary
A prewarmed Web process should have a process assertion.
Per Arne Vollan
Reported
2019-02-25 10:10:48 PST
To make sure the prewarm message is handled in the Web process before the process is suspended, the process should have a process assertion.
Attachments
Patch
(3.90 KB, patch)
2019-02-25 10:15 PST
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2019-02-25 10:15:59 PST
Created
attachment 362907
[details]
Patch
Geoffrey Garen
Comment 2
2019-02-25 10:39:08 PST
Comment on
attachment 362907
[details]
Patch r=me
Per Arne Vollan
Comment 3
2019-02-25 10:43:17 PST
Comment on
attachment 362907
[details]
Patch Thanks for reviewing!
WebKit Commit Bot
Comment 4
2019-02-25 11:12:03 PST
Comment on
attachment 362907
[details]
Patch Clearing flags on attachment: 362907 Committed
r242050
: <
https://trac.webkit.org/changeset/242050
>
WebKit Commit Bot
Comment 5
2019-02-25 11:12:04 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2019-02-25 11:21:22 PST
<
rdar://problem/48370250
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug